--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@rn-primitives/slot": "^1.2.0",
+    "@shopify/flash-list": "2.0.2",
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
