--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@rn-primitives/progress": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@shopify/flash-list": "2.0.2",
     "date-fns": "^4.1.0",
