--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@marceloterreiro/flash-calendar": "^1.5.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
+    "@react-navigation/material-top-tabs": "^7.4.3",
     "@react-navigation/native": "^7.1.8",
     "@rn-primitives/progress": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
+    "@rn-primitives/tabs": "^1.2.0",
     "@shopify/flash-list": "2.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
@@ -45,12 +49,15 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.65",
+    "react-native-pager-view": "6.9.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-tab-view": "^4.2.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
