--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.65",
     "react-native-pager-view": "6.9.1",
