--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/material-top-tabs": "^7.4.3",
     "@react-navigation/native": "^7.1.8",
+    "@rn-primitives/alert-dialog": "^1.2.0",
+    "@rn-primitives/portal": "^1.3.0",
     "@rn-primitives/progress": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@rn-primitives/tabs": "^1.2.0",
